Wed Oct  6 13:41:22 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/Functor.cpp:
	* ace/Functor.inl:

	  Moved virtual dtor ACE_Command_Base::~ACE_Command_Base from
	  *.inl to *.cpp.

Wed Oct  6 16:34:29 2004  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_wchar.cpp: For ACE_HAS_WCHAR, #include "ace/OS_NS_string.h"
	  since it's needed in some of the emulation methods.

Wed Oct  6 14:50:53 2004  Chris Cleeland  <cleeland_c@ociweb.com>

	* tests/Message_Queue_Test.cpp (iterator_test): Changed initial
	  HWM specification for the QUEUE size to match the size of
	  'buffer'.  It seems very strange to try to send each element of
	  'buffer' into the queue, but to set QUEUE's HWM potentially
	  lower than sizeof(buffer).  This makes the test run to
	  completion on platforms like RH8 where it had been failing for a
	  good long while.

Wed Oct  6 11:20:53 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/Message_Queue.cpp:
	* ace/Message_Queue.inl:

	  Move virtual dtor ACE_Message_Queue_Base::~ACE_Message_Queue_Base
	  and virtual method ACE_Message_Queue_Base::state() from *.inl to
	  *.cpp.

	* ace/Signal.cpp:
	* ace/Signal.inl:

	  Move virtual dtor ACE_Sig_Adapter::~ACE_Sig_Adapter() from *.inl
	  to *.cpp.

Wed Oct  6 12:25:29 2004  Steve Huston  <shuston@riverace.com>

	* examples/APG/Logging/Change_Mask.cpp:
	* examples/APG/Logging/Howto_Syslog.cpp:
	* examples/APG/Logging/Simple1.cpp:
	* examples/APG/Logging/Simple2.cpp:
	* examples/APG/Logging/Trace_Return.cpp:
	* examples/APG/Logging/Use_Callback.cpp:
	* examples/APG/Logging/Use_Callback2.cpp:
	* examples/APG/Logging/Use_Logger.cpp:
	* examples/APG/Logging/Use_Logging_Server.cpp:
	* examples/APG/Logging/Use_Logging_Strategy.cpp:
	* examples/APG/Logging/Use_LogManager.cpp:
	* examples/APG/Logging/Use_Multiple_Sinks.cpp:
	* examples/APG/Logging/Use_Ostream.cpp:
	* examples/APG/Logging/Use_Stderr.cpp:
	* examples/APG/Logging/Use_Syslog.cpp:
	* examples/APG/Logging/Wrap_Macros.cpp: